Change server and websocket network
Change server IP host
Allow localhost or network IP from computer.

If network IP, allows other devices to connect to the server.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -162,19 +162,16 @@
             <p class="subtitle"></p>
 
             <div class="button-grid">
-                <a
-                    href="http://127.0.0.1:888/dashboard.html"
-                    class="nav-button dashboard">
+                <a id="dashLink" href="/dash" class="nav-button dashboard">
                     Dashboard for Scoreboard
                 </a>
 
-                <a
-                    href="http://127.0.0.1:888/scoreboard.html"
-                    class="nav-button scoreboard">
+                <a id="scoresLink" href="/scores" class="nav-button scoreboard">
                     Scoreboard
                 </a>
 
                 <a
+                    id="spotifyLink"
                     href="http://127.0.0.1:888/spotify.html"
                     class="nav-button spotify">
                     Spotify Widget
